<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>themis_description</name>
  <version>0.0.1</version>
  <description>Westwood Robotics THEMIS (TH02-A7) robot description: URDF, MuJoCo MJCF, and meshes.</description>
  <maintainer email="wcompton@caltech.edu">Will Compton</maintainer>
  <author>Westwood Robotics (mesh + URDF sources, Apache-2.0)</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
